--- a/index.html
+++ b/index.html
@@ -154,12 +154,9 @@
                 ><span>OpenAI API</span>
               </div>
               <div class="project-links">
-                <a
-                  href="https://pantrypal-ai-git-main-krishkumars-projects.vercel.app/"
-                  class="btn"
-                  target="_blank"
-                  >Visit Site ↗</a
-                >
+                <a href="https://pantrypal-ai..." class="btn" target="_blank">
+                  Visit Site <i class="fas fa-arrow-up-right-from-square"></i>
+                </a>
                 <a
                   href="https://github.com/kumarkrishh/pantrypal.ai"
                   class="btn secondary"
