mobile ui fixes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             href="KrishKumar_Resume_Apple.pdf"
             target="_blank"
             class="btn secondary"
-            >View Résumé ↗</a
+            >View Résumé <i class="fas fa-arrow-up-right-from-square"></i></a
           >
         </div>
         <div class="social-links">
@@ -63,8 +63,8 @@
             </li>
           </ul>
           <div class="tags">
-            <span>C++</span><span>Swift</span><span>Networking</span
-            ><span>System Daemons</span>
+            <span>C++</span><span>Swift</span><span>Computer Networking</span
+            ><span>Security</span>
           </div>
         </div>
 
@@ -84,8 +84,8 @@
             </li>
           </ul>
           <div class="tags">
-            <span>Python</span><span>PyTorch</span><span>Cybersecurity</span
-            ><span>Grid Simulation</span>
+            <span>Python</span><span>PyTorch</span><span>Machine Learning</span><span>Cybersecurity</span
+            ><span>Power Grid Simulation</span>
           </div>
         </div>
 
@@ -105,7 +105,7 @@
             </li>
           </ul>
           <div class="tags">
-            <span>Python</span><span>RL</span><span>Energy Systems</span
+            <span>Python</span><span>Reinforcement Learning</span><span>Power Grid Infrastructure</span
             ><span>Optimization</span>
           </div>
         </div>
@@ -128,7 +128,7 @@
           </ul>
           <div class="tags">
             <span>BrightScript</span><span>SceneGraph</span><span>UI Design</span
-            ><span>TV App Dev</span>
+            ><span>RokuTV App Dev</span>
           </div>
         </div>
       </section>
@@ -153,14 +153,14 @@
                 ><span>OpenAI API</span>
               </div>
               <div class="project-links">
-                <a href="https://pantrypal-ai..." class="btn" target="_blank">
+                <a href="https://pantrypal-ai-git-main-krishkumars-projects.vercel.app/" class="btn" target="_blank">
                   Visit Site <i class="fas fa-arrow-up-right-from-square"></i>
                 </a>
                 <a
                   href="https://github.com/kumarkrishh/pantrypal.ai"
                   class="btn secondary"
                   target="_blank"
-                  >View Code ↗</a
+                  >View Code <i class="fas fa-arrow-up-right-from-square"></i></a
                 >
               </div>
             </div>
@@ -179,17 +179,14 @@
                 ><span>REST API</span>
               </div>
               <div class="project-links">
-                <a
-                  href="https://bruin-ride-wl7n.vercel.app/"
-                  class="btn"
-                  target="_blank"
-                  >Visit Site ↗</a
-                >
+                <a href="https://bruin-ride-wl7n.vercel.app/" class="btn" target="_blank">
+                  Visit Site <i class="fas fa-arrow-up-right-from-square"></i>
+                </a>
                 <a
                   href="https://github.com/kumarkrishh/uniride"
                   class="btn secondary"
                   target="_blank"
-                  >View Code ↗</a
+                  >View Code <i class="fas fa-arrow-up-right-from-square"></i></a
                 >
               </div>
             </div>
