--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 </p>
 
         <div class="hero-buttons">
-          <a href="#experience" class="btn">Explore My Work ↓</a>
-          <a
+          <a href="#projects" class="btn">Explore My Work ↓</a>
+          <!-- <a
             href="KrishKumar_Resume_Apple.pdf"
             target="_blank"
             class="btn secondary"
             >View Résumé <i class="fas fa-arrow-up-right-from-square"></i></a
-          >
+          > -->
         </div>
         <div class="social-links">
           <a href="https://github.com/kumarkrishh" target="_blank">
@@ -143,10 +143,10 @@
               class="project-img"
             />
             <div class="project-content">
-              <h4>PantryPal: AI Recipe Recommender</h4>
+              <h4>PantryPal - AI Recipe Recommender</h4>
               <p>
-                Suggests recipes based on ingredients using OpenAI. Includes
-                instructions + nutrition.
+                Suggests recipes based on available ingredients using OpenAI. Includes
+                step by step instructions and nutrition facts.
               </p>
               <div class="tags">
                 <span>React</span><span>Next.js</span><span>MongoDB</span
@@ -169,14 +169,13 @@
           <div class="project-card">
             <img src="uniride.png" alt="UniRide" class="project-img" />
             <div class="project-content">
-              <h4>UniRide: University Carpool Platform</h4>
+              <h4>UniRide - University Carpool Platform</h4>
               <p>
-                Built full-stack carpooling platform for students with REST APIs
-                and real-time chat.
+                Built full-stack carpooling platform enabling students to create and join rides with real-time messaging.
               </p>
               <div class="tags">
                 <span>React</span><span>Node.js</span><span>MongoDB</span
-                ><span>REST API</span>
+                ><span>Google Cloud</span><span>REST API</span>
               </div>
               <div class="project-links">
                 <a href="https://bruin-ride-wl7n.vercel.app/" class="btn" target="_blank">
@@ -191,6 +190,26 @@
               </div>
             </div>
           </div>
+
+          <div class="project-card">
+  <img src="lahackspreview.png" alt="EcoSphere" class="project-img" />
+  <div class="project-content">
+   <h4>EcoSphere - AI for Sustainable Living</h4>
+<p>
+  Built for LAHacks 2024, EcoSphere helps users build eco-friendly habits with personalized AI-powered tools. Features include a recycling assistant, carbon footprint tracker, and emissions visualizer.
+</p>
+
+    <div class="tags">
+      <span>React</span><span>Node.js</span><span>MongoDB</span><span>Google GenAI</span>
+    </div>
+    <div class="project-links">
+      <a href="https://github.com/kumarkrishh/LAHacks2024" class="btn secondary" target="_blank">
+        View Code <i class="fas fa-arrow-up-right-from-square"></i>
+      </a>
+    </div>
+  </div>
+</div>
+
         </div>
       </section>
     </div>
