Update projects section

--- a/index.html
+++ b/index.html
@@ -137,11 +137,52 @@
         <h3>Featured Projects</h3>
         <div class="projects-grid">
           <div class="project-card">
-            <img
-              src="pantrypal2.png"
-              alt="AI Recipe App"
-              class="project-img"
-            />
+            <div class="project-image-wrapper">
+              <img
+                src="ImageAnalysisScreen.png"
+                class="project-img portrait secondary"
+                alt="Moments cluster view"
+              />
+            </div>
+
+
+            <div class="project-content">
+              <h4>Moments - Intelligent Photo Cleanup (iOS)</h4>
+              <p>
+                An on-device iOS app that groups similar photos, ranks them using
+                computer vision and machine learning, and helps users confidently delete the rest.
+              </p>
+
+              <div class="tags">
+                <span>SwiftUI</span>
+                <span>iOS</span>
+                <span>Computer Vision</span>
+                <span>Core ML</span>
+                <span>On-device ML</span>
+              </div>
+
+              <div class="project-links">
+                <a
+                  href="https://github.com/kumarkrishh/moments"
+                  class="btn secondary"
+                  target="_blank"
+                >
+                  View Code <i class="fas fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="project-card">
+            <div class="project-image-wrapper wide">
+              <img
+                src="pantrypal2.png"
+                alt="AI Recipe App"
+                class="project-img wide"
+              />
+            </div>
             <div class="project-content">
               <h4>PantryPal - AI Recipe Recommender</h4>
               <p>
@@ -150,7 +191,7 @@
               </p>
               <div class="tags">
                 <span>React</span><span>Next.js</span><span>MongoDB</span
-                ><span>OpenAI API</span>
+                ><span>OpenAI API</span><span>Gemini</span><span>Google Cloud Platform</span>
               </div>
               <div class="project-links">
                 <a href="https://pantrypal-ai-git-main-krishkumars-projects.vercel.app/" class="btn" target="_blank">
